--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,11 +13,11 @@ p {
 	margin: 1em 0;
 }
 h4{
-	color:#563d7c;
+	color:#E60033;
 }
 ol, ul{
 	padding-left: 20px;
 }
 .title{
-	color:#563d7c;
+	color:#E60033;
 }
