--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,7 +128,7 @@
 <br />
 
 <footer class="text-center" style="padding:10px;color:#999;">
-	<small>&copy;NewsDog 2015</small>
+	<small>&copy;2015 NewsDog</small>
 </footer>
 
 
