--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,129 +4,68 @@
     <title>NewsDog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
-    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-    <link rel='stylesheet' href='/stylesheets/bootstrap-theme.min.css' />
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-	<header class="navbar navbar-static-top bs-docs-nav hidden" id="top" role="banner">
-	  <div class="container">
-	    <div class="navbar-header">
-	      <a href="../" class="navbar-brand">NewsDog</a>
-	    </div>
-	    <!--<nav id="bs-navbar" class="collapse navbar-collapse">
-	      <ul class="nav navbar-nav">
-	        <li>
-	          <a href="../getting-started/">起步</a>
-	        </li>
-	      </ul>
-	    </nav>-->
-	  </div>
-	</header>    
-	<div class="container" style="margin-top:80px; font-size:16px;">
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<h1>NewsDog</h1>
-				<br />
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-12 text-center">
+  <header>
+  	<a class="logo">Newsdog</a>
+  	<div class="content">
+  		<h1>News just for you</h1>
+  		<p>
+  			NewsDog is a news reader with customized recommending function. It's just like a dog picking up the newspapers and present the news you want in time.
+  		</p>
+  		<div class="download">
+  			<a href="https://play.google.com/store/apps/details?id=com.newsdog" class="download_btn gp_btn"></a>
+  			<a href="#" class="download_btn as_btn"></a>
+  		</div>
+  	</div>
+  </header>
+  <div class="mob-download">
+  			<a href="https://play.google.com/store/apps/details?id=com.newsdog" class="download_btn gp_btn"></a>
+  			<a href="#" class="download_btn as_btn"></a>
+  </div>
+	<article>
+		<section class="feature">
+			<section class="block text-block">
+				<h2>All the news that you want to read gather here.</h2>
 				<p>
-					NewsDog是一家面向海外市场，做信息推荐和数据挖掘产品的技术公司，现已融资近千万美金。
+					NewsDog is a huge News container, pooling together all the news from thousands of quality media websites, sparing you from switching among different apps to stay informed.
 				</p>
+			</section>
+			<section class="block pic-block pic-block-1">
+			</section>
+			<section class="block mob-pic-block">
+				<img src="/images/feature_1.png" />
+			</section>
+		</section>
+		<section class="feature">
+			<section class="block pic-block pic-block-2">
+			</section>			
+			<section class="block text-block">
+				<h2>You won't miss any headlines.</h2>
 				<p>
-					目前拥有一支有成熟创业经验的团队，聚集了十名来自互联网知名科技公司的工程师，有浓厚的技术氛围。
+					NewsDog provides 24/7 real-time update, shychronizing with source medias. It will deliver the latest news to you so that you won't miss any headlines.
 				</p>
-				<p>
-					我们崇尚用技术和产品满足用户需求，推崇在轻松快乐的氛围中分享，成长。在这里，我们每天都在创造价值。			
-				</p>
-			</div>
-		</div>
-		<br />
-		<br />
-		<div class="row">
-			<div class="col-md-12 text-center">
-				<p>
-					<h3>我们给你提供的是</h3>
-					<br />
-					<h4>短期回报</h4>
-					<p>业界顶级的薪水，超过BAT同级别水平</p>
-					<h4>长期回报</h4>
-					<p>期权股票，享受公司高速成长带来的期权指数式价值成长</p>
-					<h4>发展平台</h4>
-					<p>扁平结构，无层级，你将对公司发展产生巨大影响</p>
-					<h4>生活风险控制</h4>
-					<p>五险一金</p>
-					<h4>工作环境</h4>
-					<p>MacBook，免费午餐</p>
-					<h4>团队合作</h4>
-					<p>与一流的团队一起实现创意，高速成长</p>
-					<br />
-					<p>
-					期待有创业想法，喜欢工程师文化，愿意和团队一起成长的你，加入我们。
-					</p>
-					<p>
-					我们的工作地点在北京十号线地铁站附近。请在简历中注明申请职位名称，发送至：<a href="mailto:chenyukun@newsdog.today">chenyukun@newsdog.today</a>
-						
-					</p>
-				</p>
-			</div>
-		</div>
-	</div>
-<br />
-<br />
-<br />
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4">
-				<br />
-				<br />
-				<h4>数据抓取和处理高级工程师</h4>
-				<br />
-				<p>负责大规模网页文本的抓取，存储，滤噪，去重等后期清理工作，月薪25k~35k</p>
-				<ol>
-					<li>编码能力彪悍</li>
-					<li>有爬虫，数据挖掘分类或聚类相关经验</li>
-					<li>数据结构功底彪悍者优先</li>
-					<li>熟悉linux，python者优先</li> 
-					<li>了解数据库原理者优先</li>
-					<li>熟悉浏览器内核优先，理解http，熟悉html, DOM, xpath优先</li>
-				</ol>
-			</div>
-			<div class="col-md-4">
-				<br />
-				<br />
-				<h4>iOS高级工程师</h4>
-				<br />
-				<p>负责公司移动App的研发，参与需求定义过程，设计良好的代码结构，月薪25k~35k</p>
-				<ol>
-					<li>1年以上Objective-C以及iOS开发经验</li>
-					<li>编程功底扎实，编程习惯良好</li>
-					<li>1年以上知名互联网公司经验优先 </li>
-				</ol>
-			</div>
-			<div class="col-md-4">
-				<br />
-				<br />
-				<h4>推荐系统高级工程师</h4>
-				<br />
-				<p>参与个性化推荐系统架构的研发和优化，给用户提供精准推荐的算法。月薪25k~35k</p>
-				<ol>
-					<li>编程能力强悍</li>
-					<li>有推荐系统相关经验</li>
-					<li>数据结构功底扎实</li>
-					<li>有海量数据机器学习/数据挖掘/自然语言处理/搜索引擎相关经验者优先</li>
-					<li>熟悉linux，python者优先</li> 
-				</ol>
-			</div>
-		</div>
-	</div>
+			</section>
+			<section class="block mob-pic-block">
+				<img src="/images/feature_2.png" />
+			</section>
 
-<br />
-<br />
-<br />
-
+		</section>
+		<section class="feature">
+			<section class="block text-block">
+				<h2>Think in your shoes.</h2>
+				<p>
+					NewsDog will select the most suitable news for you in millions of daily news according to your reading habits and preferences. The more you read, the better NewsDog gets at serving you.
+				</p>
+			</section>
+			<section class="block pic-block pic-block-3">
+			</section>
+			<section class="block mob-pic-block">
+				<img src="/images/feature_3.png" />
+			</section>
+		</section>
+	</article>
 <footer class="text-center" style="padding:10px;color:#999;">
 	<small>&copy;2015 NewsDog</small>
 </footer>
