--- a/views/app.ejs
+++ b/views/app.ejs
@@ -4,9 +4,73 @@
     <title>NewsDog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-  <script>
+  <header>
+    <a class="logo">Newsdog</a>
+    <div class="content">
+      <h1>News just for you</h1>
+      <p>
+        NewsDog is a news reader with customized recommending function. It's just like a dog picking up the newspapers and present the news you want in time.
+      </p>
+      <div class="download">
+        <a href="https://play.google.com/store/apps/details?id=com.newsdog" class="download_btn gp_btn"></a>
+        <a href="#" class="download_btn as_btn"></a>
+      </div>
+    </div>
+  </header>
+  <div class="mob-download">
+        <a href="https://play.google.com/store/apps/details?id=com.newsdog" class="download_btn gp_btn"></a>
+        <a href="#" class="download_btn as_btn"></a>
+  </div>
+  <article>
+    <section class="feature">
+      <section class="block text-block">
+        <h2>All the news that you want to read gather here.</h2>
+        <p>
+          NewsDog is a huge News container, pooling together all the news from thousands of quality media websites, sparing you from switching among different apps to stay informed.
+        </p>
+      </section>
+      <section class="block pic-block pic-block-1">
+      </section>
+      <section class="block mob-pic-block">
+        <img src="/images/feature_1.png" />
+      </section>
+    </section>
+    <section class="feature">
+      <section class="block pic-block pic-block-2">
+      </section>      
+      <section class="block text-block">
+        <h2>You won't miss any headlines.</h2>
+        <p>
+          NewsDog provides 24/7 real-time update, shychronizing with source medias. It will deliver the latest news to you so that you won't miss any headlines.
+        </p>
+      </section>
+      <section class="block mob-pic-block">
+        <img src="/images/feature_2.png" />
+      </section>
+
+    </section>
+    <section class="feature">
+      <section class="block text-block">
+        <h2>Think in your shoes.</h2>
+        <p>
+          NewsDog will select the most suitable news for you in millions of daily news according to your reading habits and preferences. The more you read, the better NewsDog gets at serving you.
+        </p>
+      </section>
+      <section class="block pic-block pic-block-3">
+      </section>
+      <section class="block mob-pic-block">
+        <img src="/images/feature_3.png" />
+      </section>
+    </section>
+  </article>
+<footer class="text-center" style="padding:10px;color:#999;">
+  <small>&copy;2015 NewsDog</small>
+</footer>
+
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -16,8 +80,8 @@
   ga('send', 'pageview');
 
 </script>
-	<script type="text/javascript">
-	location.href = "https://play.google.com/store/apps/details?id=com.newsdog";
-	</script>
+
+  <script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
