--- a/views/app.ejs
+++ b/views/app.ejs
@@ -44,7 +44,7 @@
       <section class="block text-block">
         <h2>You won't miss any headlines.</h2>
         <p>
-          NewsDog provides 24/7 real-time update, shychronizing with source medias. It will deliver the latest news to you so that you won't miss any headlines.
+          NewsDog provides 24/7 real-time update, synchronizing with source medias. It will deliver the latest news to you so that you won't miss any headlines.
         </p>
       </section>
       <section class="block mob-pic-block">
