--- a/views/app.ejs
+++ b/views/app.ejs
@@ -16,7 +16,7 @@
       </p>
       <div class="download">
         <a href="https://play.google.com/store/apps/details?id=com.newsdog" class="download_btn gp_btn"></a>
-        <a href="#" class="download_btn as_btn"></a>
+        <a  href="https://itunes.apple.com/in/app/newsdog/id1037182352?mt=8" class="download_btn as_btn"></a>
       </div>
     </div>
   </header>
